<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:scrollbars="vertical">

    <TextView 
        android:id="@+id/textView_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dip"
        android:text="@string/add_reminder_title"/>
    
    <EditText
        android:id="@+id/editText_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dip"
        android:layout_marginRight="6dip"
        android:ems="10" >

        <requestFocus />
    </EditText>
    
    <TextView 
        android:id="@+id/textView_end_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dip"
        android:text="@string/add_reminder_end_date"/>

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
    <TextView 
        android:id="@+id/textView_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dip"
        android:text="@string/add_reminder_location"/>
    
    <RelativeLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content">
    
    	<Button
        	android:id="@+id/button_choose_location"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignParentTop="true"
        	android:layout_alignParentRight="true"
        	android:layout_marginRight="6dip"
        	android:text="@string/add_reminder_choose_location"/>

    	<TextView
    	    android:id="@+id/add_reminder_lat"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_toLeftOf="@id/button_choose_location"
        	android:layout_marginLeft="6dip"
        	android:text="@string/add_reminder_lat"/>
    	
    	<TextView  
        	android:id="@+id/add_reminder_lon"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content" 
        	android:layout_toLeftOf="@id/button_choose_location"
            android:layout_below="@id/add_reminder_lat"
            android:layout_marginLeft="6dip"
        	android:text="@string/add_reminder_lon"/>
	</RelativeLayout>
    
    <TextView 
        android:id="@+id/textView_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dip"
        android:layout_marginRight="6dip"
        android:layout_marginBottom="6dip"
        android:text="@string/add_reminder_description"/>
    
    <EditText
        android:id="@+id/editText_description"
        android:layout_width="match_parent"
        android:layout_height="100dip"
        android:layout_marginLeft="6dip"
        android:layout_marginRight="6dip"
        android:inputType="textMultiLine"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dip"
        android:layout_gravity="center">

        <Button
            android:id="@+id/button_add_reminder_confirm"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:text="@string/button_add" />

        <Button
            android:id="@+id/button_add_reminder_cancel"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/button_add_reminder_confirm"
            android:text="@string/button_cancel" />
    </RelativeLayout>
    
</LinearLayout>